--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Smokesville</string>
+    <string name="subtract">Subtract</string>
+    <string name="add">Add</string>
 </resources>
