--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Smokesville</string>
     <string name="subtract">Subtract</string>
     <string name="add">Add</string>
+    <string name="current_temperature_colon">Current Temperature:</string>
 </resources>
